tests/snapshots/snapshots__scrolled_lane_60x20.snap
---
source: tests/snapshots.rs
expression: "harness.screen(60, 20)"
---
 Snapshot Board   Board · All tasks

 Backlog 9
 ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
 ↑ 2 more
 ▎ Task 3
 ▎ ◷ 3h ago

 ▎ Task 4
 ▎ With a description
 ▎ ◷ 4h ago

 ▎ Task 5
 ▎ ◷ 5h ago

 ▌ Task 6
 ▌ With a description
 ▌ ◷ 6h ago
 ↓ 3 more
 BOARD   ● saved   j/k card   h/l column   v view   n/N new
