tests/snapshots/snapshots__search_applied_100x30.snap
---
source: tests/snapshots.rs
expression: "harness.screen(100, 30)"
---
 TUI KANBAN   Snapshot Board   [BOARD]                                                          / ca
 COLUMNS           │╭──────────────────────────────────────────────────────────────────────────────╮
                    │ Backlog  0 / 3                                                               │
 ▌ Backlog 0/3      │No matching cards                                                             │
   In Prog…1/2      │                                                                              │
   Done    0/2      │Press esc to clear search                                                     │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    ╰──────────────────────────────────────────────────────────────────────────────╯
 tab rail  •  v view  •  hjkl move  •  n new  •  e edit  •  ? help
