tests/snapshots/snapshots__search_terms_applied_100x30.snap
---
source: tests/snapshots.rs
expression: "harness.screen(100, 30)"
---
 Snapshot Board   Board · All tasks
 /  in:progress ×   updated:<1d ×   cmd ×  Backspace removes the last term                   1 of 7

  Columns              Backlog  0/3              In Progress  1/2          Done  0/2
                       ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
   Backlog       0/3
 ▌ In Progress   1/2   No matches                ▌ Command table           No matches
   Done          0/2                             ▌ Every keybinding def…
                                                 ▌ ◷ 1h ago




















 BOARD   ● saved   Esc clear   Tab rail   j/k card   h/l column   v view   n/N new   Enter open
