tests/snapshots/snapshots__search_terms_typing_100x30.snap
---
source: tests/snapshots.rs
expression: "harness.screen(100, 30)"
---
 Snapshot Board   Board · All tasks
 /  in:progress updated:<1d cmd                                                              1 of 7

  Columns              Backlog  0/3              In Progress  1/2          Done  0/2
                       ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
   Backlog       0/3
 ▌ In Progress   1/2   No matches                ▌ Command table           No matches
   Done          0/2                             ▌ Every keybinding def…
                                                 ▌ ◷ 1h ago




















 SEARCH   ● saved   Esc clear   Enter apply   ↓/↑ match
