tests/snapshots/snapshots__tiny_30x8.snap
---
source: tests/snapshots.rs
expression: "harness.screen(30, 8)"
---


      Terminal too small
       30×8, need 40×12
            q quit
