tests/snapshots/snapshots__tip_100x30.snap
---
source: tests/snapshots.rs
expression: "harness.screen(100, 30)"
---
 Snapshot Board   Board · All tasks

  Columns              Backlog  3                In Progress  2            Done  2
                       ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
 ▌ Backlog         3
   In Progress     2   ▌ Write the README        ▎ Calmer card style       ▎ Set up CI
   Done            2   ▌ Cover install, usage…   ▎ Tiles with an accent…   ▎ fmt, clippy and test…
                       ▌ ◷ 1d ago                ▎ ◷ 12m ago               ▎ ◷ 5h ago

                       ▎ Record a demo           ▎ Command table           ▎ Snapshot tests
                       ▎ Commit the .tape fil…   ▎ Every keybinding def…   ▎ ◷ 1d ago
                       ▎ ◷ 3d ago                ▎ ◷ 1h ago

                       ▎ Package release
                       ▎ binaries
                       ▎ ◷ Aug 20












 Tip  Press ? for the keys on any screen · Esc to dismiss
 BOARD   ● saved   Tab rail   j/k card   h/l column   v view   n/N new   Enter open   e edit
